# Node_based_image_processor

./: CMakeLists.txt  README.md  main.cpp
include/: BaseNode.hpp  BlurNode.hpp  BrightnessContrastNode.hpp  ColorChannelSplitter.hpp  ImageInput.hpp  MainWindow.hpp  NodeConnection.hpp  NodeGraph.hpp  OutputNode.hpp
src/: BaseNode.cpp  BlurNode.cpp  BrightnessContrastNode.cpp  ColorChannelSplitter.cpp  ImageInput.cpp  MainWindow.cpp  NodeConnection.cpp  NodeGraph.cpp  OutputNode.cpp
